fix: calendar content overflow

--- a/src/calendar-widget/widget.css
+++ b/src/calendar-widget/widget.css
@@ -6,6 +6,9 @@
   margin: unset;
 }
 
+.fc-timegrid-event-harness {
+  overflow: hidden;
+}
 .fc-event-main-tags {
   overflow: hidden;
 }
